[gd_scene load_steps=11 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://images/bg2.png" type="Texture" id=2]
[ext_resource path="res://Entrance.tscn" type="PackedScene" id=3]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Node.gd" type="Script" id=5]
[ext_resource path="res://SpaceMono-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://analog/analog.tscn" type="PackedScene" id=7]
[ext_resource path="res://player2.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.28125, 0.28125, 0.28125, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Corner Radius" ]

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="game" type="Node2D" index="0"]

script = ExtResource( 1 )
max_prizes = 20

[node name="Background" type="Sprite" parent="." index="0"]

position = Vector2( -4.54736, -1.51581 )
rotation = 0.000694654
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Animation", "Offset", "Transform" ]

[node name="Entrance" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 93.1446, 2195.5 )
_sections_unfolded = [ "Z Index" ]

[node name="tree_container" type="Node" parent="." index="2"]

[node name="prize_container" type="Node" parent="." index="3"]

[node name="prize_spawn_container" type="Node" parent="." index="4"]

[node name="wall_container" type="Node" parent="." index="5"]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="6"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="HealthBar" parent="CanvasLayer" index="0" instance=ExtResource( 4 )]

position = Vector2( 10, 10.8091 )

[node name="Timer" type="Node" parent="CanvasLayer" index="1"]

editor/display_folded = true
script = ExtResource( 5 )

[node name="TimeLeft" type="Label" parent="CanvasLayer/Timer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1101.0
margin_top = 20.0
margin_right = 1226.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Dialog" type="Panel" parent="CanvasLayer" index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 100.0
margin_right = 1180.0
margin_bottom = 620.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "custom_styles" ]

[node name="ScreenContainer" type="VBoxContainer" parent="CanvasLayer/Dialog" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 50.0
margin_right = 980.0
margin_bottom = 470.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Title" type="Label" parent="CanvasLayer/Dialog/ScreenContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 880.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "You Escaped!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Dialog/ScreenContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 49.0
margin_right = 880.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 13

[node name="UI" type="CanvasLayer" parent="." index="7"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="AreaAnalogRight" type="Control" parent="UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 75.0
margin_top = 73.0
margin_right = 394.0
margin_bottom = 642.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Grow Direction", "Rect", "Visibility" ]

[node name="AnalogRight" parent="UI/AreaAnalogRight" index="0" instance=ExtResource( 7 )]

position = Vector2( 64.2845, 496.744 )
isDynamicallyShowing = true
listenerNodePath = "/root/game/player"
padname = "rightPad"

[node name="player" parent="." index="8" instance=ExtResource( 8 )]

position = Vector2( 525.292, 2397.43 )

[node name="Camera2D" type="Camera2D" parent="player" index="2"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = 0
limit_top = 0
limit_right = 5336
limit_bottom = 3000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]


